<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/logo"
                    android:paddingTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:paddingTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="8dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/icon_user" />

                    <EditText
                        android:id="@+id/student_name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/student_name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/icon_code" />

                    <EditText
                        android:id="@+id/student_code"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:inputType="number"
                        android:hint="@string/prompt_student_code"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/icon_class" />

                    <EditText
                        android:id="@+id/class_name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/class_name"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/icon_group" />

                    <EditText
                        android:id="@+id/study_group"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/study_group"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="8dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/icon_location" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:text="@string/confirm_location" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:id="@+id/dormitory"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dormitory"/>

                            <RadioButton
                                android:id="@+id/motel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/motel_room"/>

                            <RadioButton
                                android:id="@+id/my_house"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/my_home"/>
                        </RadioGroup>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"/>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>